--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <li class="todo-item">
             <span class="todo-id">ID</span>
             <span class="todo-title">Mi Titulo</span>
-            <span class="todo-user">1</span>
+            <span class="todo-user">user ID</span>
             <span class="todo-completed">Completed</span>
             <button class="todo-delete">Eliminar</button>
         </li>
