funionaba mostrar la lista y ahora no

--- a/index.html
+++ b/index.html
@@ -5,7 +5,20 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.19.0/axios.min.js" integrity="sha256-S1J4GVHHDMiirir9qsXWc8ZWw74PHHafpsHp5PXtjTs=" crossorigin="anonymous"></script>
     <title>To Do!</title>
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,600,800&display=swap" rel="stylesheet">
     <style>
+        body{
+            width:80vw;
+            border: black 5px solid;
+        }
+        .todo-title{
+            font-size: 30px;
+            font-family: 'Montserrat', sans-serif;
+        }
+        .todo-item{
+            font-size: 30px;
+            
+        }
         .todo-id, .todo-title, .todo-user {
             border-right: 1px solid #999;
         }
